--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -96,8 +96,15 @@
 
 @misc{jaxb2008, 
 	title = "JAXB homepage",
-	howpublished = "\url{http://http://jaxb.java.net}",
+	howpublished = "\url{http://jaxb.java.net}",
 	year = 2008
+}
+
+@misc{ldaprfc1996, 
+	title = "A String Representation of LDAP Search Filters",
+	author = "T. Howes",
+	howpublished = "\url{http://www.ietf.org/rfc/rfc1960.txt.}",
+	year = 1996
 }
 
 @misc{eaipatterns, 
@@ -105,6 +112,14 @@
 	howpublished = "\url{http://www.eaipatterns.com/toc.html}",
 	year = 2003
 }
+
+@book{hall2011,
+	author = "Richard Hall, Karl Pauls, Stuart McCulloch, David Savage ",
+	title ="OSGi in Action: Creating Modular Applications in Java",
+	year = 2011,
+	publisher = "Manning Publications"
+}
+
 
 @article{name06,
 	Author = {Name},
