--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -30,20 +30,20 @@
 
 \section{Definicja problemu } % section headings are printed smaller than chapter names
 % intro
-Integracja to łączenie mniejszych elementów ze sobą w celu stworzenia większego, spójnego, poprawnie działającego elementu. W informatyce integracja dotyczy głównie całych systemów. Czasami integracja nie kończy się tylko na łączeniu funkcjonalności ale także na dodawaniu nowych, jest to spowodowane tym, że system mający wiele komponentów mających różne zastosowania ma dzięki temu dużo większe możliwości i możę uzyskać funkcjonalność jakiej jego składowe nie byłyby w stanie uzyskać samodzielnie. Integracja systemów jest zadaniem bardzo trudnym, mającym charakter przekrojowy, wymagającyn wiedzy z wielu dziedzin takich jak:
+Integracja to łączenie mniejszych elementów ze sobą w celu stworzenia większego, spójnego, poprawnie działającego elementu. W informatyce pojęcie to dotyczy głównie całych systemów. Czasami integracja nie kończy się tylko na łączeniu funkcjonalności ale także na dodawaniu nowych, jest to spowodowane tym, że system mający wiele komponentów mających różne zastosowania ma dzięki temu dużo większe możliwości i może uzyskać funkcjonalność jakiej jego składowe nie byłyby w stanie uzyskać samodzielnie. Integracja systemów jest zadaniem bardzo trudnym, mającym charakter przekrojowy, wymagającym wiedzy z wielu dziedzin takich jak:
  \begin{itemize}
 	\item sieci komputerowe
 	\item programowanie
 	\item zarządzanie procesami biznesowymi
 	\item znajomość narzędzi wspierających integrację
 \end{itemize} 
-Komputerowe przetwarzanie mowy jest w ostatnim czasie szybko rozwijającą się dziedziną w przemyśle informatycznym. Wykorzystuje się je w wielu różnych dziedzinach zarówno związanych z rozrywką ( rozmainte gry polegające na jak najwierniejszym zaśpiewaniu podanego utworu), z życiem codziennym (Apple Siri czyli wirtualny asystent) jak i z pracą(różne systemy telefoniczne działające bez udziału człowieka). W wielu sytuacjach wykorzystanie komputerowo przetwarzanj mowy jest niezastąpione.\\
+Komputerowe przetwarzanie mowy jest w ostatnim czasie szybko rozwijającą się dziedziną w przemyśle informatycznym. Wykorzystuje się je w wielu różnych dziedzinach zarówno związanych z rozrywką ( rozmaite gry polegające na jak najwierniejszym zaśpiewaniu podanego utworu), z życiem codziennym (Apple Siri czyli wirtualny asystent) jak i z pracą(różne systemy telefoniczne działające bez udziału człowieka). W wielu sytuacjach wykorzystanie komputerowego przetwarzania mowy jest niezastąpione.\\
 Podobnie sytuacja wygląda z wykorzystaniem architektury SOA. Jest to jedno z najważniejszych osiągnieć informatycznych ostatnich lat. Podejście to zdecydowanie dominuje w obecnie projektowanych architekturach. Jednym z głowych powodów takiego stanu rzeczy jest uproszczenie modelu współczesnych dużych aplikacji. Umożliwia ono podzielenie systemu na serwisy które są niezależnymi, samodzielnymi, łatwymi w zarządzaniu, posiadającymi jasno i jednoznacznie zdefiniowane interfejsy encjami, które można wykorzystać w różnej kolejności w celu otrzymania różnych efektów. \\
 Celem tej pracy jest zbadanie możliwości wykorzystania nowoczesnej i prężnie rozwijającej się architektury do stworzenia gotowego systemy ułatwiającego i ujednolicającego proces tworzenia aplikacji przetwarzających mowę.
  
 
 
-\subsection{Obszar badań} % subsection headings are again smaller than section names
+\section{Obszar badań} % subsection headings are again smaller than section names
 W skład zakresu pracy wchodzą zarówno technologie związane z architekturą SOA jak i z przetwarzaniem mowy. W celu użycia odpowiednich narzędzi przeprowadzono wiele badań i testów w czasie których dużą wagę przykładano do:
 \begin{itemize}
  	\item możliwości konfiguracyjnych
@@ -51,6 +51,6 @@ W skład zakresu pracy wchodzą zarówno technologie związane z architekturą S
 	\item łatwości rozbudowy
 	\item dostępnej dokumentacjji i pomocy technicznej
 \end{itemize}
-W efekcie przeprowadzonych czynności okazało się, że najlepsze efekty uzyskać można korzystając z szyny ESB  Apache ServiceMix,  syntezatorów mowy Ivona i FreeTTS oraz innych mniej istotnych narzędzi potrzebnych do stworzenia architektury zgodnej z SOA oraz zdolnej do efektywnego wykonywania postawionych przed nią zadań. 
+Efekt przeprowadzonych czynności i wnioski z niego wynikające przedstawione są w poniższych rozdziałach.
 
 
